# partitioning_django_postgres_extra

./: .env  README.md  main.py  pyproject.toml
core/: basemodels.py  celery.py  services.py  settings.py  urls.py
templates/: base.html
todo/: models.py  partitioning.py  urls.py  views.py
todo/management/commands/: convert_to_partitions.py  ensure_partitions.py  gen_todos.py  gen_todos_nonexist.py  run_query.py
todo/migrations/: 0001_initial.py  0002_alter_todo_created_at_and_more.py  0003_todononexisting_deadline_alter_todo_created_at_and_more.py  0004_todononexisting_status_alter_todo_created_at_and_more.py
todo/services/: todo_list.py
todo/templates/todos/: todo_confirm_delete.html  todo_detail.html  todo_form.html  todo_list.html
