[project]
name = "partitioning-django-postgres-extra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "django-debug-toolbar>=6.0.0",
    "django-postgres-extra>=2.0.9",
    "faker>=37.5.3",
    "psycopg2>=2.9.10",
    "python-decouple>=3.8",
]
